--- a/css/main.css
+++ b/css/main.css
@@ -36,4 +36,31 @@ body{
     font-weight: 600;
 }
 
+.btn {
+    background-color: #15173c;
+    color: white;
+    border: 0;
+    padding: 1.5rem .5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: .5rem;
+    cursor: pointer;
+}
 
+.btn:hover{
+    background-color: #090c31;
+}
+
+#cero{
+    grid-column: span 2;
+}
+
+#igual{
+    grid-row: span 2;
+    background-color: #e6394a;
+}
+
+#igual:hover{
+    background-color: #e65766;
+}
