--- a/css/main.css
+++ b/css/main.css
@@ -7,17 +7,20 @@
 
 body{
     min-height: 100vh;
-    background-color: #090c31;
+    background: linear-gradient(to bottom right, blue, black);
     display: grid;
     place-items: center;
 }
 
 .calculadora {
     background-color: #15173c;
+    background: linear-gradient(to bottom right, #353cc9, #15173c);
     color: white;
-    width: 350px;
+    width: 360px;
     max-width: 100%;
     padding: 1.5rem;
+    border: groove;
+    border-color: darkblue;
     border-radius: 1rem;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
@@ -39,7 +42,8 @@ body{
 .btn {
     background-color: #15173c;
     color: white;
-    border: 0;
+    border: groove;
+    border-color: darkblue;
     padding: 1.5rem .5rem;
     display: flex;
     justify-content: center;
@@ -58,9 +62,11 @@ body{
 
 #igual{
     grid-row: span 2;
-    background-color: #e6394a;
+    background-color: #e32538;
+    border: groove;
+    border-color: darkmagenta;
 }
 
 #igual:hover{
-    background-color: #e65766;
+    background-color: #d2182a;
 }
